# game-of-life

./: .gitignore  CMakeLists.txt  README
include/: application.h  buffer.h  display.h
src/: application.cpp  buffer.cpp  display.cpp  game-of-life.cpp  main.cpp
